--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -303,8 +303,8 @@ Despite the circular character of these two steps, we find that this is not an i
 Steps \ref{itm:step-minrv} and \ref{itm:step-canaries} must be understood as a prototype of a verification procedure proposed in this thesis which is given by steps \ref{itm:step-semantics} to \ref{itm:step-loop}.
 Having the setup to test these steps being derived via a methodology that is circular to some degree does not make the procedure itself circular.
 The opposite is the case:
-We find that the definition of information flow semantic, information flow control properties and the proof-refine-loop are all well founded and comprehensible, i.e. follow intuition.
-On the other hand, we must admit that it is unknown whether there are blind spots to the verification procedure or more precisely: to the information flow control properties.
+We find that the definition of information flow semantic, information flow properties and the prove-refine loop are all well founded and comprehensible, i.e. follow intuition.
+On the other hand, we must admit that it is unknown whether there are blind spots to the verification procedure or more precisely: to the information flow properties.
 
 We argue that our results are indeed trustworthy as we managed to show that our properties are not meaningless since they are able to detect both the SYSRET and the cache poisoning vulnerability and well founded in intuition.
 But it is unclear
