--- a/thesis/sections/conclusion.tex
+++ b/thesis/sections/conclusion.tex
@@ -5,7 +5,7 @@
 
 Find an overview of this thesis as a whole in figure \ref{fig:overview}.
 As a first step, the MINRV8 architecture inspired by the RISC-V architecture was defined and implemented in nuXmv in section \ref{sec:minrv8}.
-In section \ref{sec:ifc}, we developed information flow semantics and three information flow properties forming an information flow policy in spirit of the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17}.
+In section \ref{sec:ifc}, we developed information flow semantics and three information flow properties forming an information flow control in spirit of the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17}.
 The information flow semantics were used to augmented the model of the MINRV8 by information flow tracking.
 In section \ref{sec:results} we introduced eight assumptions that, when implemented software running in machine-mode such as \glspl{os}, guarantee the absence of vulnerabilities covered by aforementioned information flow properties.
 We evaluated our model, the properties and the assumptions by showing that taken together, they manage to detect both the cache poisoning \cite{Wojtczuk09} and the SYSRET vulnerability \cite{Dunlap19}.
@@ -25,7 +25,7 @@ This was put to a test by showing that said implementation does violate the prop
 In other words: it was shown that the three properties \smv{MEMORY_OP_INTEGRITY}, \smv{CSR_INTEGRITY} and \smv{NO_LEAK} cover at least vulnerabilities related to the cache poisoning or SYSRET vulnerability.
 This marks the main result of this thesis and shows that this work is \textit{relevant}.
 Furthermore, mitigations to these vulnerabilities can be verified using the same model.
-It must be decided on a case by case basis whether a given violation of the information flow policy actually marks a vulnerability of the architecture leaving it with the need to be altered or marks a feature the risks of which must be controlled in software.
+It must be decided on a case by case basis whether a given violation of the information flow properties actually marks a vulnerability of the architecture leaving it with the need to be altered or marks a feature the risks of which must be controlled in software.
 To achieve this, a novel approach of using model checking for verifying architectural specifications was used.
 We discussed another case where model checking was applied to architectural specifications in \ref{sec:related-model-checking} \cite{BradfieldS16}.
 However, this approach was flawed, did not use model checking to its full potential and implemented a very limited model
@@ -69,7 +69,7 @@ These objectives are met by our work:
     \item The properties itself are completely architecture independent and as such stable.
     The assumptions are architecture dependent and rely on both instructions available and concrete semantics of these instructions.
     However, we feel subjectively that only basic mechanics are used and predict that the assumptions in a practical environment of an architecture subject to change should be relatively stable as well.
-    \item The premise of information flow tracking on specification level is to describe the architecture from a different point of view.
+    \item The premise of information flow tracking on instruction level is to describe the architecture from a different point of view.
     It is therefore obvious that there is very little risk of common-mode failure.
 \end{itemize}
 
