--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -85,7 +85,7 @@ The second constraint sets up caching errorless, i.e. if the cache is valid, it 
 \end{table}
 
 During the prove-refine loop, whenever it was found that a counter-example to a property reported by nuXmv was valid and not an actual vulnerability of the architecture but a risk to be controlled by software, an assumption was phrased resembling a mitigation of the respective vulnerability.
-This led to a total number of eight assumptions which in total grant the absence of any information flow policy violation.
+This led to a total number of eight assumptions which in total grant the absence of any information flow control violation.
 These assumptions can be grouped into three categories:
 \begin{itemize}
     \item Mode-boundary crossing related assumptions
